[package]
name = "docgen"
version = "0.1.0"
authors = [
    "Abdullah Atta <abdullahatta@streetwriters.co>",
    "Niklas Begley <nik@doctave.com>",
]
edition = "2021"

[dependencies]
clap = "2.33.3"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
tiny_http = "0.8"
http = "0.2"
notify = "4.0.12"
tungstenite = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
crossbeam-channel = "0.5.6"
elasticlunr-rs = { git = "https://github.com/thecodrr/elasticlunr-rs.git", branch = "field_ignoring" }
latex2mathml = { git = "https://github.com/thecodrr/latex2mathml.git", branch = "master", optional = true }
bunt = "0.2.3"
scoped_threadpool = "0.1"
bus = "2.2.3"
rayon = "1.4"
colorsys = "0.5.7"
alphanumeric-sort = "1.4.0"
include_dir = "0.7.2"
pulldown-cmark = { version = "0.8", default-features = false, features = [
    "simd",
] }
url = "2.2.1"
emojis = "0.5.1"
regex = "1"
port_scanner = "0.1.5"
slug = "0.1.4"
syntect = { version = "5.0.0", default-features = true }
once_cell = "1.15.0"
minify-js = "0.2.9"
katex = { version = "0.4.4", optional = true }
markup = "0.13.1"

[build-dependencies]
walkdir = "2.3.1"
seahash = "4.1.0"
serde_json = { version = "1.0" }
syntect = { version = "5.0.0", default-features = true }
minify-js = "0.2.9"
mime = "0.3.16"
mime_guess = "2.0.4"

[dev-dependencies]
indoc = "1.0.2"
insta = { version = "1.21.0", features = ["yaml"] }
criterion = "0.3.0"
percent-encoding = "2.2.0"

[features]
default = ["latex2mathml"]
katex = ["dep:katex"]
latex2mathml = ["dep:latex2mathml"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
